[project]
name = "cl3s"
version = "0.0.1"
description = "Combinatory Logic Search Space Synthesizer"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Felix Laarmann", email = "felix.laarmann@tu-dortmund.de" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "networkx==3.5",
  "numpy==1.26.4",
  "scikit-learn==1.6.1",
  "scipy==1.12.0",
  "combinatory-synthesizer @ git+https://github.com/tudo-seal/cosy.git",
  "mypy==1.15.0",
  "mypy_extensions==1.1.0",
  "typing_extensions==4.13.2",
  "grakel==0.1.10",
  "pydot",
  "gpytorch",
  "torch",
  "pandas",
  "matplotlib",
  "pytest",
]

[project.urls]
Source = "https://github.com/FelixLaarmann/cl3s"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
