[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "cl3s"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">=3.11"
authors = [
  { name = "Felix Laarmann", email = "felix.laarmann@tu-dortmund.de" },
]
maintainers = [
  { name = "Felix Laarmann", email = "felix.laarmann@tu-dortmund.de" },
]
description = "Combinatory Logic Search Space Synthesizer"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/FelixLaarmann/cl3s"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

